fix in workers variable in pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Start performance tests
-        run: docker-compose up --scale worker=${workers} --force-recreate --exit-code-from=master
+        run: docker-compose up --scale worker=${{ github.event.inputs.workers }} --force-recreate --exit-code-from=master
       - name: export test report
         run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
       - name: export artifact
