--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ on:
       workers:
         description: 'Number of worker nodes to be used in performance tests'     
         required: true
-        default: ${{ 4 }}
       locustfile:
         description: 'Define the locust performance test file name to be executed'     
         required: true
@@ -31,6 +30,7 @@ jobs:
     #env variables
     env:
       LOCUST_LOCUSTFILE: ${{ github.event.inputs.locustfile }}
+      WORKERS: ${{ github.event.inputs.workers || 4 }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -40,12 +40,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Start performance tests
-        run: docker-compose up --scale worker=${{ github.event.inputs.workers }} --force-recreate 
-      - name: export test report
-        run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
-      - name: export artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: locust-report
-          path: report.html
+      run: docker-compose up --scale worker=${{ github.event.inputs.workers }} --force-recreate 
+          - name: export test report
+            run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
+          - name: export artifact
+            uses: actions/upload-artifact@v2
+            with:
+              name: locust-report
+              path: report.html
 
