--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Start performance tests
-        run: docker-compose up --scale worker=${{ github.event.inputs.workers }} --force-recreate 
+        run: docker-compose up --scale worker=${WORKERS} --force-recreate 
       - name: export test report
         run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
       - name: export artifact
