--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
       - name: Start performance tests
-        run: docker-compose up --scale worker=${WORKERS} --force-recreate 
+        run: docker-compose up --scale worker=${WORKERS} --force-recreate --exit-code-from=master
       - name: export test report
+        if: always()
         run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
       - name: export artifact
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: locust-report
