Fixing pipeline error - no directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,12 @@ jobs:
       WORKERS: ${{ github.event.inputs.workers || 4 }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - uses: AutoModality/action-clean@v1
+        if: ${{ always() }} # To ensure this step runs even when earlier steps fail
       - uses: actions/checkout@v2
 
       - name: Start performance tests
-        run: docker-compose up --scale worker=${WORKERS} --exit-code-from=master
+        run: docker-compose up --scale worker=${WORKERS} --force-recreate --exit-code-from=master
       - name: export test report
         if: always()
         run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
