--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,16 @@ services:
     build: .
     ports:
      - "8089:8089"
+    environment:
+      - LOCUST_LOCUSTFILE
     volumes:
       - ./:/mnt/locust
     command: "-f /mnt/locust/${LOCUST_LOCUSTFILE} --master --host=${HOST} --headless --html=report.html"
   
   worker:
     build: .
+    environment:
+      - LOCUST_LOCUSTFILE
     volumes:
       - ./:/mnt/locust
     command: -f /mnt/locust/${LOCUST_LOCUSTFILE} --worker --master-host master --host=${HOST}
