trying out a different approach for docker cp

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         if: always()
       - name: export test report
         if: always()
-        run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html ./report
+        run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html ./report/report.html
       - name: export artifact
         if: always()
         uses: actions/upload-artifact@v3
