--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,19 @@ jobs:
         if: always()
       - name: export test report
         if: always()
-        run: docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
+        run: |
+          mkdir report && docker cp baselineperformancetest-locust_master_1:./home/locust/report.html .
       - name: export artifact
         if: always()
         uses: actions/upload-artifact@v2
         with:
           name: locust-report
-          path: report.html
+          path: /report/report.html
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
+        with:
+          access_token: ${{ secrets.ACTIONS_SECRET }}
+          branch: gh-pages
+          folder: report
 
